--- a/index.html
+++ b/index.html
@@ -2865,6 +2865,12 @@ as <code>transit</code></p>
 </ul>
 </div>
 </li>
+<li>
+<p><a href="https://github.com/clojure/tools.logging"><code>clojure.tools.logging</code></a></p>
+</li>
+<li>
+<p><a href="https://github.com/ptaoussanis/timbre"><code>timbre</code></a></p>
+</li>
 </ul>
 </div>
 <div class="paragraph">
