--- a/index.html
+++ b/index.html
@@ -1447,31 +1447,22 @@ Java property option in Clojure:</p>
 </ul>
 </div>
 <div class="paragraph">
-<p>The babashka nREPL server does not write an <code>.nrepl-port</code> file at
-startup, but you can easily write a script that launches the server and
-writes the file:</p>
+<p>The babashka nREPL server currently does not write an <code>.nrepl-port</code> file at
+startup. Using the following <code>nrepl</code> task, defined in a <code>bb.edn</code>, you can
+accomplish the same:</p>
 </div>
 <div class="listingblock">
 <div class="content">
-<pre class="rouge highlight"><code data-lang="clojure"><span class="o">#</span><span class="n">!/usr/bin/env</span><span class="w"> </span><span class="n">bb</span><span class="w">
-
-</span><span class="p">(</span><span class="nb">import</span><span class="w"> </span><span class="p">[</span><span class="n">java.net</span><span class="w"> </span><span class="n">ServerSocket</span><span class="p">]</span><span class="w">
-        </span><span class="p">[</span><span class="n">java.io</span><span class="w"> </span><span class="n">File</span><span class="p">]</span><span class="w">
-        </span><span class="p">[</span><span class="n">java.lang</span><span class="w"> </span><span class="n">ProcessBuilder$Redirect</span><span class="p">])</span><span class="w">
-
-</span><span class="p">(</span><span class="nf">require</span><span class="w"> </span><span class="o">'</span><span class="p">[</span><span class="n">babashka.wait</span><span class="w"> </span><span class="no">:as</span><span class="w"> </span><span class="n">wait</span><span class="p">])</span><span class="w">
-
-</span><span class="p">(</span><span class="k">let</span><span class="w"> </span><span class="p">[</span><span class="n">nrepl-port</span><span class="w"> </span><span class="p">(</span><span class="nb">with-open</span><span class="w"> </span><span class="p">[</span><span class="n">sock</span><span class="w"> </span><span class="p">(</span><span class="nf">ServerSocket.</span><span class="w"> </span><span class="mi">0</span><span class="p">)]</span><span class="w"> </span><span class="p">(</span><span class="nf">.getLocalPort</span><span class="w"> </span><span class="n">sock</span><span class="p">))</span><span class="w">
-      </span><span class="n">cp</span><span class="w"> </span><span class="p">(</span><span class="nf">str/join</span><span class="w"> </span><span class="n">File/pathSeparatorChar</span><span class="w"> </span><span class="p">[</span><span class="s">"src"</span><span class="w"> </span><span class="s">"test"</span><span class="p">])</span><span class="w">
-      </span><span class="n">pb</span><span class="w"> </span><span class="p">(</span><span class="nb">doto</span><span class="w"> </span><span class="p">(</span><span class="nf">ProcessBuilder.</span><span class="w"> </span><span class="p">(</span><span class="nb">into</span><span class="w"> </span><span class="p">[</span><span class="s">"bb"</span><span class="w"> </span><span class="s">"--nrepl-server"</span><span class="w"> </span><span class="p">(</span><span class="nb">str</span><span class="w"> </span><span class="n">nrepl-port</span><span class="p">)</span><span class="w">
-                                       </span><span class="s">"--classpath"</span><span class="w"> </span><span class="n">cp</span><span class="p">]</span><span class="w">
-                                      </span><span class="n">*command-line-args*</span><span class="p">))</span><span class="w">
-           </span><span class="p">(</span><span class="nf">.redirectOutput</span><span class="w"> </span><span class="n">ProcessBuilder$Redirect/INHERIT</span><span class="p">))</span><span class="w">
-      </span><span class="n">proc</span><span class="w"> </span><span class="p">(</span><span class="nf">.start</span><span class="w"> </span><span class="n">pb</span><span class="p">)]</span><span class="w">
-  </span><span class="p">(</span><span class="nf">wait/wait-for-port</span><span class="w"> </span><span class="s">"localhost"</span><span class="w"> </span><span class="n">nrepl-port</span><span class="p">)</span><span class="w">
-  </span><span class="p">(</span><span class="nf">spit</span><span class="w"> </span><span class="s">".nrepl-port"</span><span class="w"> </span><span class="n">nrepl-port</span><span class="p">)</span><span class="w">
-  </span><span class="p">(</span><span class="nf">.deleteOnExit</span><span class="w"> </span><span class="p">(</span><span class="nf">File.</span><span class="w"> </span><span class="s">".nrepl-port"</span><span class="p">))</span><span class="w">
-  </span><span class="p">(</span><span class="nf">.waitFor</span><span class="w"> </span><span class="n">proc</span><span class="p">))</span></code></pre>
+<pre class="rouge highlight"><code data-lang="clojure"><span class="p">{</span><span class="no">:tasks</span><span class="w">
+ </span><span class="p">{</span><span class="no">:requires</span><span class="w"> </span><span class="p">([</span><span class="n">babashka.fs</span><span class="w"> </span><span class="no">:as</span><span class="w"> </span><span class="n">fs</span><span class="p">]</span><span class="w">
+             </span><span class="p">[</span><span class="n">babashka.process</span><span class="w"> </span><span class="no">:as</span><span class="w"> </span><span class="n">p</span><span class="w"> </span><span class="no">:refer</span><span class="w"> </span><span class="p">[</span><span class="n">process</span><span class="p">]]</span><span class="w">
+             </span><span class="p">[</span><span class="n">babashka.wait</span><span class="w"> </span><span class="no">:as</span><span class="w"> </span><span class="n">wait</span><span class="p">])</span><span class="w">
+  </span><span class="n">nrepl</span><span class="w"> </span><span class="p">(</span><span class="k">let</span><span class="w"> </span><span class="p">[</span><span class="n">port</span><span class="w"> </span><span class="p">(</span><span class="nb">with-open</span><span class="w"> </span><span class="p">[</span><span class="n">sock</span><span class="w"> </span><span class="p">(</span><span class="nf">java.net.ServerSocket.</span><span class="w"> </span><span class="mi">0</span><span class="p">)]</span><span class="w"> </span><span class="p">(</span><span class="nf">.getLocalPort</span><span class="w"> </span><span class="n">sock</span><span class="p">))</span><span class="w">
+              </span><span class="n">proc</span><span class="w"> </span><span class="p">(</span><span class="nf">process</span><span class="w"> </span><span class="p">(</span><span class="nb">str</span><span class="w"> </span><span class="s">"bb nrepl-server "</span><span class="w"> </span><span class="n">port</span><span class="p">)</span><span class="w"> </span><span class="p">{</span><span class="no">:inherit</span><span class="w"> </span><span class="n">true</span><span class="p">})]</span><span class="w">
+          </span><span class="p">(</span><span class="nf">wait/wait-for-port</span><span class="w"> </span><span class="s">"localhost"</span><span class="w"> </span><span class="n">port</span><span class="p">)</span><span class="w">
+          </span><span class="p">(</span><span class="nf">spit</span><span class="w"> </span><span class="s">".nrepl-port"</span><span class="w"> </span><span class="n">port</span><span class="p">)</span><span class="w">
+          </span><span class="p">(</span><span class="nf">fs/delete-on-exit</span><span class="w"> </span><span class="s">".nrepl-port"</span><span class="p">)</span><span class="w">
+          </span><span class="p">(</span><span class="nb">deref</span><span class="w"> </span><span class="n">proc</span><span class="p">))}}</span></code></pre>
 </div>
 </div>
 <div class="sect4">
