--- a/index.html
+++ b/index.html
@@ -3907,9 +3907,8 @@ info <a href="#core_async">here</a>.</p>
 <h2 id="contributing"><a class="link" href="#contributing">Contributing</a></h2>
 <div class="sectionbody">
 <div class="paragraph">
-<p>Visit Babashka book&#8217;s <a href="https://github.com/babashka/book">Github repository</a> and read
-<a href="https://github.com/babashka/book/blob/master/CONTRIBUTING.md">CONTRIBUTING.md</a>
-on how to contribute.</p>
+<p>Visit Babashka book&#8217;s <a href="https://github.com/babashka/book">Github repository</a> and
+make an issue and/or PR.</p>
 </div>
 </div>
 </div>
