--- a/index.html
+++ b/index.html
@@ -3918,19 +3918,8 @@ make an issue and/or PR.</p>
 <div class="paragraph">
 <p>Copyright © 2020-2021 Michiel Borkent</p>
 </div>
-<div class="imageblock">
-<div class="content">
-<a class="image" href="https://creativecommons.org/licenses/by-nc-nd/3.0/deed.en_US"><img src="https://i.creativecommons.org/l/by-nc-nd/3.0/88x31.png" alt="Creative Commons License"></a>
-</div>
-</div>
 <div class="paragraph">
-<p>This book is licensed under a
-<a href="https://creativecommons.org/licenses/by-nc-nd/3.0/deed.en_US">Creative Commons
-License</a>.</p>
-</div>
-<div class="paragraph">
-<p>Please note that because this is a <strong>No Derivatives</strong> license, you may <strong>not</strong> use
-this repository as a basis for creating your own book based on this one.</p>
+<p>Licensed under <a href="https://creativecommons.org/licenses/by-sa/4.0">CC BY-SA 4.0</a>.</p>
 </div>
 </div>
 </div>
