--- a/index.html
+++ b/index.html
@@ -846,7 +846,7 @@ list of beginner resources.</p>
 <div class="sect2">
 <h3 id="_setting_expectations"><a class="link" href="#_setting_expectations">Setting expectations</a></h3>
 <div class="paragraph">
-<p>Babashka uses <a href="https://github.com/borkdude/sci">sci</a> for interpreting Clojure. Sci
+<p>Babashka uses <a href="https://github.com/babashka/SCI">SCI</a> for interpreting Clojure. Sci
 implements a substantial subset of Clojure. Interpreting code is in general not
 as performant as executing compiled code. If your script takes more than a few
 seconds to run or has lots of loops, Clojure on the JVM may be a better fit, as
@@ -956,7 +956,7 @@ babashka.</p>
 </div>
 <div class="listingblock">
 <div class="content">
-<pre class="rouge highlight"><code data-lang="bash">Babashka v0.6.2
+<pre class="rouge highlight"><code data-lang="bash">Babashka v0.6.5
 
 Usage: bb <span class="o">[</span>svm-opts] <span class="o">[</span>global-opts] <span class="o">[</span><span class="nb">eval </span>opts] <span class="o">[</span>cmdline args]
 or:    bb <span class="o">[</span>svm-opts] <span class="o">[</span>global-opts] file <span class="o">[</span>cmdline args]
@@ -972,6 +972,7 @@ Global opts:
   <span class="nt">-cp</span>, <span class="nt">--classpath</span>  Classpath to use. Overrides bb.edn classpath.
   <span class="nt">--debug</span>           Print debug information and internal stacktrace <span class="k">in case</span> of exception.
   <span class="nt">--force</span>           Passes <span class="nt">-Sforce</span> to deps.clj, forcing recalculation of the classpath.
+  <span class="nt">--init</span> &lt;file&gt;     Load file after any preloads and prior to evaluation/subcommands.
 
 Help:
 
@@ -2394,8 +2395,8 @@ Making uberjar</code></pre>
 <div class="paragraph">
 <p>Both <code>shell</code> and <code>clojure</code> return a
 <a href="https://github.com/babashka/babashka.process">process</a> object which returns the
-<code>:exit</code> code among other info. By default these function will exit the babashka
-process when a non-zero exit code was returned and they will inherit the
+<code>:exit</code> code among other info. By default these functions will throw an
+exception when a non-zero exit code was returned and they will inherit the
 stdin/stdout/stderr from the babashka process.</p>
 </div>
 <div class="listingblock">
@@ -2445,6 +2446,14 @@ ls</span>: foo: No such file or directory
 </div>
 </div>
 <div class="paragraph">
+<p>To run a program in another directory, you can use the <code>:dir</code> option:</p>
+</div>
+<div class="listingblock">
+<div class="content">
+<pre class="rouge highlight"><code data-lang="clojure"><span class="p">(</span><span class="nf">shell</span><span class="w"> </span><span class="p">{</span><span class="no">:dir</span><span class="w"> </span><span class="s">"subproject"</span><span class="p">}</span><span class="w"> </span><span class="s">"ls"</span><span class="p">)</span></code></pre>
+</div>
+</div>
+<div class="paragraph">
 <p>Other supported options are similar to those of
 <a href="https://github.com/babashka/babashka.process"><code>babashka.process/process</code></a>.</p>
 </div>
@@ -2453,13 +2462,26 @@ ls</span>: foo: No such file or directory
 to finish before executing the next expression. If this doesn&#8217;t fit your use
 case, you can use
 <a href="https://github.com/babashka/babashka.process"><code>babashka.process/process</code></a>
-directly instead.</p>
+directly instead. These two invocations are roughly equivalent:</p>
+</div>
+<div class="listingblock">
+<div class="content">
+<pre class="rouge highlight"><code data-lang="clojure"><span class="p">(</span><span class="nf">require</span><span class="w"> </span><span class="o">'</span><span class="p">[</span><span class="n">babashka.process</span><span class="w"> </span><span class="no">:as</span><span class="w"> </span><span class="n">p</span><span class="w"> </span><span class="no">:refer</span><span class="w"> </span><span class="p">[</span><span class="n">process</span><span class="p">]]</span><span class="w">
+         </span><span class="o">'</span><span class="p">[</span><span class="n">babashka.tasks</span><span class="w"> </span><span class="no">:as</span><span class="w"> </span><span class="n">tasks</span><span class="p">])</span><span class="w">
+
+</span><span class="p">(</span><span class="nf">tasks/shell</span><span class="w"> </span><span class="p">{</span><span class="no">:dir</span><span class="w"> </span><span class="s">"subproject"</span><span class="p">}</span><span class="w"> </span><span class="s">"npm install"</span><span class="p">)</span><span class="w">
+
+</span><span class="p">(</span><span class="nb">-&gt;</span><span class="w"> </span><span class="p">(</span><span class="nf">process</span><span class="w"> </span><span class="s">"npm install"</span><span class="w"> </span><span class="p">{</span><span class="no">:dir</span><span class="w"> </span><span class="s">"subproject"</span><span class="w"> </span><span class="no">:inherit</span><span class="w"> </span><span class="n">true</span><span class="p">})</span><span class="w">
+    </span><span class="p">(</span><span class="nf">p/check</span><span class="p">))</span></code></pre>
+</div>
 </div>
 </div>
 <div class="sect3">
 <h4 id="tasks:clojure"><a class="link" href="#tasks:clojure">clojure</a></h4>
 <div class="paragraph">
-<p>The <code>clojure</code> function starts a Clojure process using <a href="https://github.com/borkdude/deps.clj">deps.clj</a>.</p>
+<p>The <code>clojure</code> function starts a Clojure process using
+<a href="https://github.com/borkdude/deps.clj">deps.clj</a>. The interface is exactly the
+same as the clojure CLI. E.g. to evaluate an expression:</p>
 </div>
 <div class="listingblock">
 <div class="content">
@@ -2467,17 +2489,34 @@ directly instead.</p>
 </div>
 </div>
 <div class="paragraph">
-<p>The function behaves similar to <code>shell</code> with respect to the exit code, return
-value and supported options, except when it comes to features that do not start
-a process, but only do some printing. E.g.:</p>
+<p>or to invoke clj-kondo as a library:</p>
 </div>
 <div class="listingblock">
 <div class="content">
-<pre class="rouge highlight"><code data-lang="clojure"><span class="p">(</span><span class="nf">clojure</span><span class="w"> </span><span class="s">"-Spath"</span><span class="p">)</span></code></pre>
+<pre class="rouge highlight"><code data-lang="clojure"><span class="p">{</span><span class="no">:tasks</span><span class="w"> </span><span class="p">{</span><span class="nb">eval</span><span class="w"> </span><span class="p">(</span><span class="nf">clojure</span><span class="w"> </span><span class="p">{</span><span class="no">:dir</span><span class="w"> </span><span class="s">"subproject"</span><span class="p">}</span><span class="w"> </span><span class="s">"-M:clj-kondo"</span><span class="p">)}}</span></code></pre>
 </div>
 </div>
 <div class="paragraph">
-<p>does not return a process, but simply prints output to <code>*out*</code>, so you are able to capture it with <code>with-out-str</code>.</p>
+<p>The <code>clojure</code> task function behaves similar to <code>shell</code> with respect to the exit
+code, return value and supported options, except when it comes to features that
+do not start a process, but only do some printing. E.g. you can capture the
+classpath using:</p>
+</div>
+<div class="listingblock">
+<div class="content">
+<pre class="rouge highlight"><code data-lang="clojure"><span class="p">(</span><span class="nb">with-out-str</span><span class="w"> </span><span class="p">(</span><span class="nf">clojure</span><span class="w"> </span><span class="s">"-Spath"</span><span class="p">))</span></code></pre>
+</div>
+</div>
+<div class="paragraph">
+<p>because this operation doesn&#8217;t start a process but prints to <code>*out*</code>.</p>
+</div>
+<div class="paragraph">
+<p>To run a <code>clojure</code> task in another directory:</p>
+</div>
+<div class="listingblock">
+<div class="content">
+<pre class="rouge highlight"><code data-lang="clojure"><span class="p">{</span><span class="no">:tasks</span><span class="w"> </span><span class="p">{</span><span class="nb">eval</span><span class="w"> </span><span class="p">(</span><span class="nf">clojure</span><span class="w"> </span><span class="p">{</span><span class="no">:dir</span><span class="w"> </span><span class="s">"subproject"</span><span class="p">}</span><span class="w"> </span><span class="s">"-M:clj-kondo"</span><span class="p">)}}</span></code></pre>
+</div>
 </div>
 </div>
 <div class="sect3">
